[project]
name = "hw1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "datasketch>=1.7.0",
    "ipykernel>=7.1.0",
    "jieba>=0.42.1",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
    "zhplot>=1.0.0",
]
